--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Reflections | SLCC ePortfolio</title>
+  <title>Personal Project | SLCC ePortfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
   <style>
     body, html {
@@ -85,8 +85,8 @@
   </div>
 
   <div class="container">
-    <h1>> Reflections</h1>
-    <p>This is the Reflections page. Welcome to a very personal and mildly sarcastic slice of SLCC history.</p>
+    <h1>> Personal Project</h1>
+    <p>This is the Personal Project page. Welcome to a very personal and mildly sarcastic slice of SLCC history.</p>
   </div>
 </div>
 
@@ -94,9 +94,9 @@
   const bootMessages = [
     "[BOOT]: Initializing device...",
     "[INFO]: CPU Temp nominal | RAM overload: emotionally",
-    "[INFO]: Loading: slcc_reflections_module",
-    "[OK]: Reflections system loaded",
-    "[EXEC]: slcc_eportfolio --reflections"
+    "[INFO]: Booting: aim_assistant_ai.py",
+    "[OK]: Personal Project system loaded",
+    "[EXEC]: slcc_eportfolio --personal_project"
   ];
 
   const log = document.getElementById("boot-log");
