--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-<html><head><title>About_Me</title></head><body><h1>About Me</h1></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>SLCC ePortfolio - Jesus Lopez Aguilar</title>
+  <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+<div id="boot">
+  <pre>
+[BOOT]: Initializing device...
+[INFO]: Importing user: Jesus Lopez Aguilar
+[OK]: Portfolio system loaded
+[EXEC]: slcc_eportfolio --start
+  </pre>
+</div>
+<div class="nav">
+  <a href="index.html">Home</a>
+  <a href="about_me/index.html">About Me</a>
+  <a href="reflections/index.html">Reflections</a>
+  <a href="personal_project/index.html">Project</a>
+  <a href="dev_log/index.html">Dev Log</a>
+  <a href="final_reflection/index.html">Final</a>
+</div>
+<div class="container">
+  <h1>Welcome to my SLCC ePortfolio</h1>
+  <p>Built with chaos, ambition, and just enough caffeine to make it functional. This is my journey, coded and compiled by me — Jesus Lopez Aguilar.</p>
+</div>
+<footer>
+  SLCC ePortfolio | Created by Jesus Lopez Aguilar<br>
+  Built with code, Adderall, impulse, and love.
+</footer>
+</body>
+</html>
