--- a/index (2).html
+++ b/index (2).html
@@ -2,34 +2,45 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Reflections</title>
+  <title>Dev Log</title>
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/style.css">
+  <script>
+    window.onload = function() {
+      setTimeout(function() {
+        document.getElementById('boot').style.display = 'none';
+        document.getElementById('main').style.display = 'block';
+      }, 3000);
+    };
+  </script>
 </head>
 <body>
 <div id="boot">
   <pre>
 [BOOT]: Initializing device...
-[INFO]: Importing slcc_reflections_module
-[OK]: reflections system loaded
-[EXEC]: slcc_eportfolio --reflections
+[INFO]: Importing dev_logs_debug.log
+[OK]: dev_log system loaded
+[EXEC]: slcc_eportfolio --dev_log
   </pre>
 </div>
-<div class="nav">
-  <a href="../index.html">Home</a>
-  <a href="../about_me/index.html">About Me</a>
-  <a href="../reflections/index.html">Reflections</a>
-  <a href="../personal_project/index.html">Project</a>
-  <a href="../dev_log/index.html">Dev Log</a>
-  <a href="../final_reflection/index.html">Final</a>
+
+<div id="main" style="display:none;">
+  <div class="nav">
+    <a href="../index.html">Home</a>
+    <a href="../about_me/index.html">About Me</a>
+    <a href="../reflections/index.html">Reflections</a>
+    <a href="../personal_project/index.html">Project</a>
+    <a href="../dev_log/index.html">Dev Log</a>
+    <a href="../final_reflection/index.html">Final</a>
+  </div>
+  <div class="container">
+    <h1>Dev Log</h1>
+    <p>Every error message lives here. So does my soul.</p>
+  </div>
+  <footer>
+    SLCC ePortfolio | Created by Jesus Lopez Aguilar<br>
+    Built with code, Adderall, impulse, and love.
+  </footer>
 </div>
-<div class="container">
-  <h1>Reflections</h1>
-  <p>Here are some thoughts from my Gen Ed journey — and maybe some roasts.</p>
-</div>
-<footer>
-  SLCC ePortfolio | Created by Jesus Lopez Aguilar<br>
-  Built with code, Adderall, impulse, and love.
-</footer>
 </body>
 </html>
