--- a/dev_log/index.html
+++ b/dev_log/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>SLCC ePortfolio - Jesus Lopez Aguilar</title>
+  <title>Dev Log</title>
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
   <style>
 body {
@@ -51,24 +51,24 @@ pre {
 <div id="boot">
   <pre>
 [BOOT]: Initializing device...
-[INFO]: Importing user: Jesus Lopez Aguilar
-[OK]: Portfolio system loaded
-[EXEC]: slcc_eportfolio --start
+[INFO]: Importing dev_logs_debug.log
+[OK]: dev_log system loaded
+[EXEC]: slcc_eportfolio --dev_log
   </pre>
 </div>
 
 <div id="main" style="display:none;">
   <div class="nav">
-    <a href="index.html">Home</a>
-    <a href="about_me/index.html">About Me</a>
-    <a href="reflections/index.html">Reflections</a>
-    <a href="personal_project/index.html">Project</a>
-    <a href="dev_log/index.html">Dev Log</a>
-    <a href="final_reflection/index.html">Final</a>
+    <a href="../index.html">Home</a>
+    <a href="../about_me/index.html">About Me</a>
+    <a href="../reflections/index.html">Reflections</a>
+    <a href="../personal_project/index.html">Project</a>
+    <a href="../dev_log/index.html">Dev Log</a>
+    <a href="../final_reflection/index.html">Final</a>
   </div>
   <div class="container">
-    <h1>Welcome to my SLCC ePortfolio</h1>
-    <p>Built with chaos, ambition, and just enough caffeine to make it functional. This is my journey, coded and compiled by me — Jesus Lopez Aguilar.</p>
+    <h1>Dev Log</h1>
+    <p>Every error message lives here. So does my soul.</p>
   </div>
   <footer>
     SLCC ePortfolio | Created by Jesus Lopez Aguilar<br>
