--- a/personal_project/index.html
+++ b/personal_project/index.html
@@ -2,9 +2,42 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Final Reflection</title>
+  <title>Personal Project</title>
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../css/style.css">
+  <style>
+body {
+  background-color: #1a1a1d;
+  color: #d1f7c4;
+  font-family: 'JetBrains Mono', monospace;
+  margin: 0;
+}
+.nav {
+  background: linear-gradient(to right, #d1d1d1, #f1f1f1);
+  padding: 15px 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.nav a {
+  color: #000;
+  text-decoration: none;
+  margin: 0 20px;
+  font-weight: 600;
+}
+.container {
+  padding: 40px;
+}
+footer {
+  text-align: center;
+  color: #888;
+  font-size: 0.85rem;
+  padding: 30px;
+}
+pre {
+  padding: 40px;
+  white-space: pre-line;
+}
+</style>
   <script>
     window.onload = function() {
       setTimeout(function() {
@@ -18,9 +51,9 @@
 <div id="boot">
   <pre>
 [BOOT]: Initializing device...
-[INFO]: Importing final_thoughts.memorydump
-[OK]: final_reflection system loaded
-[EXEC]: slcc_eportfolio --final_reflection
+[INFO]: Importing aim_assistant_ai.py
+[OK]: personal_project system loaded
+[EXEC]: slcc_eportfolio --personal_project
   </pre>
 </div>
 
@@ -34,8 +67,8 @@
     <a href="../final_reflection/index.html">Final</a>
   </div>
   <div class="container">
-    <h1>Final Reflection</h1>
-    <p>This is where I wrap it all up and try to sound wise.</p>
+    <h1>Personal Project</h1>
+    <p>This is the bot I built using YOLOv8, Python, and very little sleep.</p>
   </div>
   <footer>
     SLCC ePortfolio | Created by Jesus Lopez Aguilar<br>
