--- a/reflections/index.html
+++ b/reflections/index.html
@@ -4,7 +4,40 @@
   <meta charset="UTF-8">
   <title>Reflections</title>
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../css/style.css">
+  <style>
+body {
+  background-color: #1a1a1d;
+  color: #d1f7c4;
+  font-family: 'JetBrains Mono', monospace;
+  margin: 0;
+}
+.nav {
+  background: linear-gradient(to right, #d1d1d1, #f1f1f1);
+  padding: 15px 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.nav a {
+  color: #000;
+  text-decoration: none;
+  margin: 0 20px;
+  font-weight: 600;
+}
+.container {
+  padding: 40px;
+}
+footer {
+  text-align: center;
+  color: #888;
+  font-size: 0.85rem;
+  padding: 30px;
+}
+pre {
+  padding: 40px;
+  white-space: pre-line;
+}
+</style>
   <script>
     window.onload = function() {
       setTimeout(function() {
