its not what it looks like.....

--- a/my_goals/index.html
+++ b/my_goals/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>About Me</title>
+  <title>My Goals</title>
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet" />
   <style>
     body {
@@ -56,9 +56,10 @@
 </div>
 
 <div class="container">
-  <h1>About Me</h1>
-  <p>> whoami
-This is where you'll find my story, my roots, and why I type in monospace.</p>
+  <h1>My Goals</h1>
+  <p>> short_term()
+> long_term()
+My current and future goals — formatted like commands.</p>
 </div>
 
 <footer>
