--- a/personal_projects/index.html
+++ b/personal_projects/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>About Me</title>
+  <title>Personal Projects</title>
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet" />
   <style>
     body {
@@ -56,9 +56,9 @@
 </div>
 
 <div class="container">
-  <h1>About Me</h1>
-  <p>> whoami
-This is where you'll find my story, my roots, and why I type in monospace.</p>
+  <h1>Personal Projects</h1>
+  <p>> personal_projects.run()
+A catalog of my self-led learning and tech experiments.</p>
 </div>
 
 <footer>
