--- a/coursework/index.html
+++ b/coursework/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>About Me</title>
+  <title>Coursework</title>
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet" />
   <style>
     body {
@@ -56,9 +56,9 @@
 </div>
 
 <div class="container">
-  <h1>About Me</h1>
-  <p>> whoami
-This is where you'll find my story, my roots, and why I type in monospace.</p>
+  <h1>Coursework</h1>
+  <p>> coursework.init()
+Browse by General Education category.</p>
 </div>
 
 <footer>
