--- a/about_me/index.html
+++ b/about_me/index.html
@@ -11,57 +11,42 @@
       font-family: 'JetBrains Mono', monospace;
       margin: 0;
     }
-
     .nav {
-      background: linear-gradient(to right, #d1d1d1, #f1f1f1);
-      padding: 15px 30px;
       display: none;
+      background: #ffffff;
+      color: #000;
+      padding: 15px 30px;
       justify-content: center;
       align-items: center;
       flex-wrap: wrap;
       box-sizing: border-box;
+      font-weight: 600;
     }
-
     .nav a {
       color: #000;
       text-decoration: none;
       margin: 0 15px;
-      font-weight: 600;
       font-size: 1rem;
     }
-
     .boot-screen {
       height: 100vh;
       width: 100vw;
       display: flex;
       justify-content: center;
       align-items: center;
+      flex-direction: column;
       padding: 60px;
       font-size: 1rem;
       white-space: pre-wrap;
       text-align: left;
     }
-
-    .container {
-      display: none;
-      padding: 40px;
-      text-align: left;
-    }
-
-    .section h2 {
-      font-size: 1.2rem;
-      color: #78ffd6;
-      margin-bottom: 10px;
-      cursor: pointer;
-    }
-
     .output {
+      padding: 40px;
       font-size: 1rem;
       line-height: 1.6;
       white-space: pre-wrap;
-      text-align: left;
+      display: none;
     }
-
     .cursor {
       display: inline-block;
       width: 8px;
@@ -70,11 +55,9 @@
       animation: blink 1s step-start infinite;
       margin-left: 2px;
     }
-
     @keyframes blink {
       50% { opacity: 0; }
     }
-
     .c1 { color: #c3e88d; }
     .c2 { color: #ffcb6b; }
     .c3 { color: #f07178; }
@@ -96,137 +79,104 @@
   <a href="../personal_projects/index.html">Personal Projects</a>
 </div>
 
-<div class="container" id="main-content">
-  <h2 onclick="typeStory()" id="trigger">> whoami</h2>
-  <div class="output" id="story"></div>
-</div>
+<div class="output" id="terminal"></div>
 
 <script>
-const bootLines = [
-  "[BOOT] Initializing about_me...",
-  "[INFO] Importing cultural identity...",
-  "{SAS} Importing thoughts to give a damn...",
-  "[INFO] Confirming love for grilled cheese...",
-  "[OK] Bilingual sarcasm detected",
-  "[EXEC] Rendering life story..."
-];
+  const terminal = document.getElementById("terminal");
+  const cursor = document.createElement("span");
+  cursor.className = "cursor";
+  terminal.appendChild(cursor);
 
-const storyLines = [
-  ["Hello. My name is", "Jesus Lopez Aguilar."],
-  ["Unlike others in my community who arrived with a green card,", "I came with something stronger — a birth certificate."],
-  ["But don’t get it twisted.", "Just because I was born here doesn’t mean I got citizenship PLUS."],
-  ["What I got was", "citizenship with ads,", "taxes,", "and zero skip button."],
-  ["I was born and raised in", "Salt Lake City, Utah."],
-  ["My parents —", "Miriam Aguilar", "and", "Sergio Lopez", "— came from opposite ends of Mexico."],
-  ["My mom,", "from Córdoba, Veracruz,", "started working in the Washington fields at 17."],
-  ["Now?", "She’s a sous chef at the Little America Hotel after 25 years of hustle."],
-  ["My dad came from", "Zamora, Michoacán."],
-  ["He didn’t do construction —", "he worked for major companies that make the energy drinks you flex on TikTok."],
-  ["Yes, including Alani.", "Did I have access to unlimited supply?", "Of course."],
-  ["Was I allowed to drink them?", "Absolutely not."],
-  ["I’ve got my mom’s brains,", "my dad’s build,", "and a family tree full of stories that scream survival."],
-  ["You’ll never know what to expect from me —", "either a short furious Latina mom,", "or a dad who grills chicken so hard it owes him money."],
-  ["What you’re about to read isn’t just about me —", "it’s about all of that, too."]
-];
+  const colors = ['c1', 'c2', 'c3', 'c4', 'c5'];
+  const lines = [
+    "> whoami",
+    "My name is Jesús Antonio López Aguilar.",
+    "Unlike my family — who had to claw their way into this country with nothing but worn-out shoes, forged patience, and whatever story would get them past immigration — I was born here.",
+    "Salt Lake City, Utah. The land of clean streets, clean smiles, and dirty looks if your last name has too many vowels.",
+    "They arrived with green cards, visas, and faith stronger than Wi-Fi signals.",
+    "Me? I didn’t get a visa or a welcome basket. I came with what they call citizenship — the base model.",
+    "No green card gold card upgrade introduced by Donald Trump, just ads, taxes, and a Social Security number that the IRS treats like a timecard.",
+    "I love Salt Lake. I respect its people, its mountains, and its passive-aggressive politeness.",
+    "But that respect isn’t mutual. How dare I be born in America with brown skin and a Spanish last name?",
+    "How dare I exist in their country without asking first?",
+    "I walk into rooms where people assume I’m either the janitor or lost.",
+    "I’m neither. I’m just the proof that this system wasn’t built for people like me — but I’m still here, uninvited and unbothered."
+  ];
 
-const colors = ['c1','c2','c3','c4','c5'];
-
-const bootScreen = document.getElementById("boot");
-const bootDiv = document.getElementById("boot-lines");
-const main = document.getElementById("main-content");
-const nav = document.getElementById("navbar");
-const storyDiv = document.getElementById("story");
-
-let bootIndex = 0;
-let bootChar = 0;
-let currentBootLine;
-
-const bootCursor = document.createElement("span");
-bootCursor.className = "cursor";
-bootDiv.appendChild(bootCursor);
-
-function typeBootLine() {
-  if (bootIndex >= bootLines.length) {
-    setTimeout(() => {
-      bootScreen.style.display = "none";
-      nav.style.display = "flex";
-      main.style.display = "block";
-    }, 300);
-    return;
-  }
-
-  if (!currentBootLine) {
-    currentBootLine = document.createElement("div");
-    bootDiv.insertBefore(currentBootLine, bootCursor);
-  }
-
-  if (bootChar < bootLines[bootIndex].length) {
-    currentBootLine.textContent += bootLines[bootIndex].charAt(bootChar);
-    bootChar++;
-    bootDiv.appendChild(bootCursor);
-    setTimeout(typeBootLine, 20);
-  } else {
-    currentBootLine = null;
-    bootChar = 0;
-    bootIndex++;
-    setTimeout(typeBootLine, 250);
-  }
-}
-
-function typeStory() {
-  if (storyDiv.dataset.typed === "true") return;
-  storyDiv.dataset.typed = "true";
-
-  const storyCursor = document.createElement("span");
-  storyCursor.className = "cursor";
-
-  let line = 0;
+  let lineIndex = 0;
 
   function typeLine() {
-    if (line >= storyLines.length) return;
+    if (lineIndex >= lines.length) return;
 
     const lineDiv = document.createElement("div");
-    storyDiv.appendChild(lineDiv);
-    let segment = 0;
+    const span = document.createElement("span");
+    span.className = colors[lineIndex % colors.length];
+    lineDiv.appendChild(span);
+    terminal.insertBefore(lineDiv, cursor);
 
-    function typeSegment() {
-      if (segment >= storyLines[line].length) {
-        line++;
+    let charIndex = 0;
+    function typeChar() {
+      if (charIndex <= lines[lineIndex].length) {
+        span.textContent = lines[lineIndex].slice(0, charIndex);
+        terminal.appendChild(cursor);
+        charIndex++;
+        setTimeout(typeChar, 15);
+      } else {
+        lineIndex++;
         setTimeout(typeLine, 300);
-        return;
       }
-
-      const text = storyLines[line][segment];
-      const color = colors[segment % colors.length];
-      const wordSpan = document.createElement("span");
-      wordSpan.className = color;
-      lineDiv.appendChild(wordSpan);
-
-      let i = 0;
-      function typeChar() {
-        if (i <= text.length) {
-          wordSpan.textContent = text.slice(0, i);
-          lineDiv.appendChild(storyCursor); // Move cursor here after each char
-          i++;
-          setTimeout(typeChar, 15);
-        } else {
-          wordSpan.innerHTML += "&nbsp;";
-          segment++;
-          setTimeout(typeSegment, 100);
-        }
-      }
-
-      typeChar();
     }
-
-    typeSegment();
+    typeChar();
   }
 
-  storyDiv.innerHTML = "";
-  storyDiv.appendChild(storyCursor); // Append the cursor at the start
-  typeLine();
-}
-window.onload = typeBootLine;
+  const bootLines = [
+    "[BOOT] Initializing about_me...",
+    "[INFO] Importing cultural identity...",
+    "[SAS] Importing thoughts to give a damn...",
+    "[INFO] Confirming love for grilled cheese...",
+    "[OK] Bilingual sarcasm detected",
+    "[EXEC] Rendering life story..."
+  ];
+
+  let bootIndex = 0;
+  let bootChar = 0;
+  let currentBootLine;
+  const bootScreen = document.getElementById("boot");
+  const bootDiv = document.getElementById("boot-lines");
+  const nav = document.getElementById("navbar");
+
+  const bootCursor = document.createElement("span");
+  bootCursor.className = "cursor";
+  bootDiv.appendChild(bootCursor);
+
+  function typeBootLine() {
+    if (bootIndex >= bootLines.length) {
+      setTimeout(() => {
+        bootScreen.style.display = "none";
+        nav.style.display = "flex";
+        terminal.style.display = "block";
+        typeLine();
+      }, 300);
+      return;
+    }
+    if (!currentBootLine) {
+      currentBootLine = document.createElement("div");
+      bootDiv.insertBefore(currentBootLine, bootCursor);
+    }
+    if (bootChar < bootLines[bootIndex].length) {
+      currentBootLine.textContent += bootLines[bootIndex].charAt(bootChar);
+      bootChar++;
+      bootDiv.appendChild(bootCursor);
+      setTimeout(typeBootLine, 20);
+    } else {
+      currentBootLine = null;
+      bootChar = 0;
+      bootIndex++;
+      setTimeout(typeBootLine, 250);
+    }
+  }
+
+  window.onload = typeBootLine;
 </script>
 
 </body>
